[package]
name = "ff"
version = "0.6.3"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/ff-zeroize/"
homepage = "https://github.com/algorand/ff-zeroize"
license = "MIT/Apache-2.0"
repository = "https://github.com/algorand/ff-zeroize"
edition = "2018"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
byteorder = {version = "1", git = "https://github.com/mesalock-linux/byteorder-sgx.git"}
ff_derive = { version = "0.6.2", path = "ff_derive", optional = true }
rand_core = "0.5"
zeroize = {version = "1.1", features = ["zeroize_derive"]}

[features]
default = []
derive = ["ff_derive"]

[badges]
maintenance = { status = "actively-developed" }
