[package]
name = "ff_derive"
version = "0.6.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/ebfull/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/ff"
edition = "2018"

[lib]
proc-macro = true

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
num-bigint = {version="0.2", git ="https://github.com/mesalock-linux/num-bigint-sgx.git"}
num-traits = {version="0.2", git ="https://github.com/mesalock-linux/num-traits-sgx.git"}
num-integer = {version="0.1", git ="https://github.com/mesalock-linux/num-integer-sgx.git"}
proc-macro2 = "1"
quote = "1"
syn = "1"

[badges]
maintenance = { status = "passively-maintained" }
